# RustRaptor

./: .gitignore  .gitignore.txt  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
discord-bot/: AGENTS.md  Dockerfile  index.js
frontend/: .gitignore  Dockerfile  package-lock.json
frontend/src/apps/account-portal/pages/: api-keys.tsx
frontend/src/apps/account-portal/pages/api/: keys.ts
infra/: docker-compose.observability.yml  loki.yml  prometheus.yml  promtail.yml
rust-backend/: .env.example  AGENTS.md  Cargo.toml  Dockerfile
rust-backend/.sqlx/: query-37fba809e31c85e3f7b1408c14c46a9330d08b4449f4bac0a60aed397b889bae.json  query-3cf58f6b412fc55469ae5a06eded5b7099234b14040d240c0079fc193677580e.json  query-3f61512e6d002e24d283f4ea2430943a713d4b9f94ea09beaf2af5a93e6f530a.json  query-43267afc46c1e3fd261f54f20f871c0bbe1e4b07956c7d785b9574224a472563.json  query-59b576bb621656be6d248e583ffa224f96037829df9c18860214f3d0b5e664f5.json  query-6b9711d442869a6bf4fd0da5bc0613a803414eefa62071e3af64e23e978fe165.json  query-6fd6c41b368a34c7f43290b2ff3b9eca200fffd768697e65f5f9505d7a4b3af4.json  query-7424588157c09b37624d7545cdb7cb66ce33d61a611ca06b8003c1d49ffbe4be.json  query-89814228886939a2a0eb04b5f5def93c7deaeca091ff86050974e16a48aa814e.json  query-ab57a5739f362c18b7e839263bfacdec9367bb58ee452fd3948a8a22670b75b6.json  query-cc7e2acbcddbc3584cf7a5075ee2a8e1dd66bc34c6658c9b3f35185fb88180c3.json  query-d10edeb59eb23d82da6da689dfce88f8bde8d3db30542b708ce52a23e64ed92f.json  query-d3ecd3dffcd58b51cf6134536c37e202edab11a48461068d2fb7af110634ad03.json  query-dcec840acdf4bf6f1e76d0a0bc449a7310f1191a3289df94216ad3e1b8634c41.json  query-ea2a4bbb6c9bdccd9f0cf3a848c48ba7a33cb59f7928edd591d862fadd02bace.json  query-ee12057a5429409a9034ba027cba9e6c3baa396691bb1287d2c8739791c474a0.json  query-f0906c681d1dfa22629bdccf70810b3e9f37e88fcca176cdde0a71116d25784c.json
rust-backend/migrations/: 20250401_init_core_schema.sql  20250505_user_strategies.sql  20250513_add_user_id_to_user_strategies.sql  20250531_user_strategies_column_adds_drop_name.sql  20250601_add_strategt_columns.sql  20250713_add_key_wrapping.sql
rust-backend/src/: lib.rs  main.rs
rust-backend/src/config/: settings.rs
rust-backend/src/db/: api_keys.rs  mod.rs  models.rs  queries.rs  redis.rs
rust-backend/src/middleware/: auth.rs  metrics.rs  mod.rs  path_logger.rs
rust-backend/src/routes/: copy.rs  health.rs  mod.rs  strategies.rs  trading.rs
rust-backend/src/services/: copy_trading.rs  crypto.rs  market_data.rs  mod.rs  risk.rs  scheduler.rs  trading_engine.rs
rust-backend/src/services/blowfin/: api.rs  auth.rs  client.rs  mod.rs  ws.rs
rust-backend/src/services/strategies/: common.rs  mean_reversion.rs  mod.rs  trend_follow.rs  vcsr.rs
rust-backend/src/utils/: errors.rs  mod.rs  route_debug.rs  signature.rs  types.rs
rust-backend/tests/: routes.rs  simple_routes.rs
tools/: Cargo.toml
tools/src/: main.rs  master.env
