[package]
name = "rustraptor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }


sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "macros"] }

dotenv = "0.15"
redis = { version = "0.23", features = ["tokio-comp"] }

log = "0.4"
env_logger = "0.10"

chrono = { version = "0.4", features = ["serde"] }

tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
tungstenite = "0.26.2"
