[package]
name = "rustraptor-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustraptor_backend"  # This is how the lib is named internally (with underscores)
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }

dashmap   = "5"          # in-mem task registry
futures   = "0.3"        # abortable()
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "json",
    "macros",
    "bigdecimal",
] }

statrs = "0.16"

dotenv = "0.15"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"] }

log = "0.4"
env_logger = "0.10"

jsonwebtoken = "8.3"
hex          = "0.4"      # for hex ⇄ bytes in verify_hmac
subtle       = "2"        # constant-time equality

chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.26.2"
tokio-stream = "0.1"
futures-util = "0.3.31"
tungstenite = "0.26.2"
bigdecimal = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
anyhow = "1.0.98"
rand = "0.8.5"


[features]
default = []         # <- default set is empty
robust  = []